Updates for everyone!!!!

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
-@import "tailwindcss/utilities"; 
+@import "tailwindcss/utilities";
+
+* {
+  font-family: "Signika Negative", sans-serif !important;
+}
+
+html,
+body {
+  overflow: auto;
+}
+body {
+  height: 100vh;
+}
